# Base_config

./: .pre-commit-config.yaml  pyproject.toml  Основные_концепции_и_термины.ipynb
