[tool.poetry]
name = "samolet_base_config"
version = "0.1.0"
description = ""
authors = ["Sergey Vavilin <vavilin.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
